# lisyq-linux

./: .gitignore  Bridge.h  Bridge_Nest.h  CMakeLists.txt  PortManager.cpp  PortManager.h  README.md  Toast.cpp  Toast.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nestwindow.cpp  nestwindow.h  nestwindow.ui
installer/: build_installer.sh
installer/config/: config.xml
